@@ -2,7 +2,7 @@
 @VERSIONING@	$ENV{"MODULE_VERSION_STACK"}="@VERSION@";
 @VERSIONING@	$ENV{"MODULE_VERSION"}="@VERSION@";
 @VERSIONING@} else {
-@VERSIONING@	$ENV{"MODULE_VERSION_STACK"}=$ENV{"$MODULE_VERSION"};
+@VERSIONING@	$ENV{"MODULE_VERSION_STACK"}=$ENV{"MODULE_VERSION"};
 @VERSIONING@}
 
 sub module {
