@@ -53,7 +53,7 @@ set ts_csh "setenv testsuite yes ;"
 #  Error messages
 #
 
-set err_prereq "$error_msgs: Module '$module' depends on one of the module\\(s\\) 'trace/load_ovr trace/load_onoff trace/load_on trace/load_all2 trace/load_all1 trace/disptrac trace/disp_onoff trace/dilo_onoff trace/colon trace/all_on trace/all_off trace/CVS'\n"
+set err_prereq "$error_msgs: Module '$module' depends on one of the module\\(s\\) 'trace/load_ovr trace/load_onoff trace/load_on trace/load_all2 trace/load_all1 trace/disptrac trace/disp_onoff trace/dilo_onoff trace/colon trace/all_on trace/all_off'\n"
 set err_exec "$error_msgs: Tcl command execution failed: prereq\ttrace\n"
 
 #
