@@ -7,6 +7,11 @@
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.10
+	* Fixed the module switch with custom delimiters (Tyson Whitehead)
+	* If a bash shell check if interactive or not for alias/functions
+	* Fix the flags with regards to recursive load/unload
+	* Fix perl.pm init file typo (bug 3497092)
+	* Moved from cvs to git
 	* Fix the module swap with the --delim option (Tyson Whitehead)
 
 Modules 3.2.9
@@ -18,7 +23,6 @@ Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
 	* Optionally use Tcl memory check routines for malloc/realloc.
 	* Fixed the "module purge" memory corruption (Poor Yorick)
 	* Added support for Ruby (Tammo Tjarks)
-	* Fix the flags with regards to recursive load/unload
 
 Modules 3.2.8
 Oct  1, 2010				R.K. Owen (rk@owen.sj.ca.us)
